--- a/index.html
+++ b/index.html
@@ -4,6 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>To-Do-App</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="main">
+      <input type="text" id="input" />
+      <button id="add">Add</button>
+    </div>
+    <br /><br />
+
+    <div class="todo-item-div">
+      <h1>Todo Items</h1>
+      <ol id="OlItem">
+        <li>Mango</li>
+        <li>Apple</li>
+        <li>Lichi</li>
+        <li>Papaya</li>
+      </ol>
+    </div>
+
+    <script src="to-do.js"></script>
+  </body>
 </html>
